litmask/tests/compile/mask_deserialize_serde_attr_variant.stderr
error: MaskDeserialize! invalid-arg: `#[serde(other)]` is not yet supported; keep a plain derive (or `#[unmasked_derive]` under `#[mask_all]`)
 --> tests/compile/mask_deserialize_serde_attr_variant.rs:9:13
  |
9 |     #[serde(other)]
  |             ^^^^^
